# cdo-mcp-server

./: .env.example  README.md  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  requirements.txt  schema.sql
.github/workflows/: test.yml  weekly-ops-summary.yml
data/: db.json
initdb/: 00-init-test-db.sh
scripts/: migrate_json_to_postgres.py  ops_summary.py
src/: data.py  server.py
src/cdo_mcp_server/: data.py  server.py
tests/: test_server.py
